<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.bluemobi.dylan.step.activity.MapActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="107dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/cardViewRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/exerciseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/Timer"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="24dp"
                android:text="@string/exerciseTime"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="-105dp"
                android:layout_marginBottom="27dp"
                android:layout_toStartOf="@+id/mile"
                android:fontFamily="@font/number"
                android:text="@string/distance"
                android:textColor="@color/textColor"
                android:textSize="36sp" />

            <Chronometer
                android:id="@+id/Timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="180dp"
                android:layout_marginTop="46dp"
                android:fontFamily="@font/number"
                android:format="%s"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/mile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="110dp"
                android:layout_marginTop="60dp"
                android:text="@string/kilo"
                android:textColor="@color/grey" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">


    </com.amap.api.maps.MapView>

    <ToggleButton
        android:id="@+id/startAndTimeOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:textOff="@string/RunToggleBtnOff"

        android:textOn="@string/RunToggleBtnOn" />


</RelativeLayout>